<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gz_odom_pub_hw_component</name>
  <version>0.0.0</version>
  <description>ros2_control Hardware Component to get data from the gz Odometry Publisher plugin topic and provides as state interfaces</description>
  <maintainer email="mateusmenezes95@gmail.com">Mateus Meneses</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>gz_math_vendor</depend>
  <depend>gz_msgs_vendor</depend>
  <depend>gz_plugin_vendor</depend>
  <depend>gz_ros2_control</depend>
  <depend>gz_sim_vendor</depend>
  <depend>gz_transport_vendor</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp</depend>
  <depend>realtime_tools</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
